Fixed the issue of extra space under the iframe.

--- a/ui/css/inline-browser.css
+++ b/ui/css/inline-browser.css
@@ -4,6 +4,11 @@ html, body, iframe {
     border-width: 0;
     overflow: hidden;
 }
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 
 * {
     margin: 0;
